Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <raman@users.sf.net>

* Emacspeak 24.0 Additions And Changes:

Emacspeak 24.0 provides the following user level enhancements:

* user Visible Changes:

** emacspeak-m-player:

Updated for MPlayer release 1.0.


Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end: